cluster/apps/default/kopia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name kopia
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: metrics
  type: ClusterIP
