cluster/apps/default/kopia/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name kopia
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`backups.${SECRET_DOMAIN_0}`)
    middlewares:
    - name: local-only@file
    services:
    - name: *name
      port: 80
      namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
